--- a/public/index.html
+++ b/public/index.html
@@ -327,7 +327,7 @@
                     <p class="mb-3 text-sm text-gray-600">
                         PowerShell is an advanced scripting language and Command Line Interface (CLI) developed by Microsoft
                     </p>
-                    <a href=".././assetsg/windows_powershel.html" class="pr-3 text-indigo-500 duration-300 hover:text-indigo-700">Read the article <i class="-rotate-45 fa fa-arrow-right ms-1"></i
+                    <a href="/blog/windows_powershel.html" class="pr-3 text-indigo-500 duration-300 hover:text-indigo-700">Read the article <i class="-rotate-45 fa fa-arrow-right ms-1"></i
             ></a>
                 </div>
             </div>
