--- a/public/index.html
+++ b/public/index.html
@@ -310,7 +310,7 @@
         <div class="grid grid-cols-1 gap-10 mt-10 blog padding md:grid-cols-2 lg:grid-cols-3">
             <!-- topic 1 -->
             <div class="topic border-b cursor-pointer group hover:shadow-lg duration-500 overflow-hidden bg-[#FAFBFD]">
-                <a href="/blog/windows_powershel.html" class="relative img">
+                <a href="./blog/windows_powershel.html" class="relative img">
                     <img src="./assets/image/windows/windos.jpg" alt="" class="duration-500 group-hover:scale-110" />
                     <div class="img-desc w-full flex items-center justify-between absolute bottom-0 bg-gray-500 bg-opacity-30 backdrop-blur-[3px] text-white py-1 px-4 gap-8">
                         <p class="text-sm">Release date May 6, 2024</p>
@@ -327,13 +327,13 @@
                     <p class="mb-3 text-sm text-gray-600">
                         PowerShell is an advanced scripting language and Command Line Interface (CLI) developed by Microsoft
                     </p>
-                    <a href="/blog/windows_powershel.html" class="pr-3 text-indigo-500 duration-300 hover:text-indigo-700">Read the article <i class="-rotate-45 fa fa-arrow-right ms-1"></i
+                    <a href="./blog/windows_powershel.html" class="pr-3 text-indigo-500 duration-300 hover:text-indigo-700">Read the article <i class="-rotate-45 fa fa-arrow-right ms-1"></i
             ></a>
                 </div>
             </div>
             <!-- topic 2 -->
             <div class="topic border-b cursor-pointer group overflow-hidden bg-[#FAFBFD] hover:shadow-lg duration-500">
-                <a href="/blog/react.html" class="relative img">
+                <a href="./blog/react.html" class="relative img">
                     <img src="./assets/image/react/react.jpg" alt="" class="duration-500 group-hover:scale-110" />
                     <div class="img-desc w-full flex items-center justify-between absolute bottom-0 bg-gray-500 bg-opacity-30 backdrop-blur-[3px] text-white py-1 px-4 gap-8">
                         <p class="text-sm">Release date May 20, 2024</p>
@@ -348,14 +348,14 @@
                     <p class="mb-3 text-sm text-gray-600">
                         Front-end programming is one of the most interesting branches of programming and website design..
                     </p>
-                    <a href="/blog/react.html" class="pr-3 text-indigo-500 duration-300 hover:text-indigo-700">Read the article <i class="-rotate-45 fa fa-arrow-right ms-1"></i
+                    <a href="./blog/react.html" class="pr-3 text-indigo-500 duration-300 hover:text-indigo-700">Read the article <i class="-rotate-45 fa fa-arrow-right ms-1"></i
             ></a>
                 </div>
             </div>
             <!-- topic 3  -->
             <div class="topic border-b cursor-pointer group overflow-hidden bg-[#FAFBFD] hover:shadow-lg duration-500">
                 <div class="relative img">
-                    <a href="/blog/python.html">
+                    <a href="./blog/python.html">
                         <img src="./assets/image/python/python.jpg" alt="" class="duration-500 group-hover:scale-110" />
                     </a>
                     <div class="img-desc w-full flex items-center justify-between absolute bottom-0 bg-gray-500 bg-opacity-30 backdrop-blur-[3px] text-white py-1 px-4 gap-8">
@@ -371,7 +371,7 @@
                     <p class="mb-3 text-sm text-gray-600">
                         Python is known as the most popular programming language and since it is used in many areas, it can be used in many different situations.
                     </p>
-                    <a href="/blog/python.html" class="pr-3 text-indigo-500 duration-300 hover:text-indigo-700">Read the article <i class="-rotate-45 fa fa-arrow-right ms-1"></i
+                    <a href="./blog/python.html" class="pr-3 text-indigo-500 duration-300 hover:text-indigo-700">Read the article <i class="-rotate-45 fa fa-arrow-right ms-1"></i
             ></a>
                 </div>
             </div>
