--- a/public/index.html
+++ b/public/index.html
@@ -227,7 +227,7 @@
 
         <div class="grid grid-cols-1 gap-6 pt-10 portfolio padding md:grid-cols-2 lg:grid-cols-3">
             <!-- restuarant  -->
-            <a data-aos="fade-up" data-aos-duration="800" href="https://rahimi-code.github.io/Image-Search-engine/" target="_blank" class="relative overflow-hidden rounded-lg group">
+            <a data-aos="fade-up" data-aos-duration="800" href="#" target="_blank" class="relative overflow-hidden rounded-lg group">
                 <img src="./assets/image/New folder/5.png" alt="" class="rounded-lg " />
                 <div class="description">
                     <h2 class="text-xl font-semibold text-white">Restaurant</h2>
@@ -238,7 +238,7 @@
                 </div>
             </a>
             <!-- image search engin  -->
-            <a data-aos="fade-up" data-aos-duration="1000" href="https://rahimi-code.github.io/Image-Search-engine/" target="_blank" class="relative overflow-hidden rounded-lg group">
+            <a data-aos="fade-up" data-aos-duration="1000" href="#" target="_blank" class="relative overflow-hidden rounded-lg group">
                 <img src="./assets/image/New folder/1.png" alt="" class="rounded-lg" />
                 <div class="description">
                     <h2 class="text-xl font-semibold text-white">Search Engine</h2>
@@ -249,7 +249,7 @@
                 </div>
             </a>
             <!-- togle form  -->
-            <a data-aos="fade-up" data-aos-duration="1200" href="https://rahimi-code.github.io/login-form/" target="_blank" class="relative overflow-hidden rounded-lg group">
+            <a data-aos="fade-up" data-aos-duration="1200" href="#" target="_blank" class="relative overflow-hidden rounded-lg group">
                 <img src="./assets/image/New folder/3.png" alt="" class="rounded-lg" />
                 <div class="description">
                     <h2 class="text-xl font-semibold text-white">Sign Up Form</h2>
@@ -260,7 +260,7 @@
                 </div>
             </a>
             <!-- loading effect form  -->
-            <a data-aos="fade-up" data-aos-duration="1200" href="https://rahimi-code.github.io/loading-effect-form/" target="_blank" class="relative overflow-hidden rounded-lg group">
+            <a data-aos="fade-up" data-aos-duration="1200" href="#" target="_blank" class="relative overflow-hidden rounded-lg group">
                 <img src="./assets/image/New folder/2.png" alt="" class="rounded-lg" />
                 <div class="description">
                     <h2 class="text-xl font-semibold text-white">Loading Form</h2>
@@ -281,7 +281,7 @@
                 </div>
             </a>
             <!-- sign in form  -->
-            <a data-aos="fade-up" data-aos-duration="1200" href="https://rahimi-code.github.io/sign-in-form/" target="_blank" class="relative overflow-hidden rounded-lg group">
+            <a data-aos="fade-up" data-aos-duration="1200" href="#" target="_blank" class="relative overflow-hidden rounded-lg group">
                 <img src="./assets/image/New folder/6.png" alt="" class="border-b rounded-lg" />
                 <div class="description">
                     <h2 class="font-semibold text-white md:text-xl">Regstration Form</h2>
@@ -429,7 +429,7 @@
                   class="text-2xl text-gray-600 duration-500 fa-brands fa-telegram hover:text-gray-800"
                 ></i
               ></a>
-                        <a href="https://github.com/Rahimi-Code"><i
+                        <a href="#"><i
                   class="text-2xl text-gray-600 duration-500 fa-brands fa-square-github hover:text-gray-800"
                 ></i
               ></a>
