--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="./style.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
     <!-- os animation cdn link  -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <title>Mukhtar Rahimi</title>
@@ -31,7 +32,9 @@
                 </ul>
             </nav>
             <div id="barbtn" class="absolute flex items-center justify-center w-10 h-10 bg-indigo-100 rounded-md cursor-pointer bar-btn md:hidden right-8">
-                <i class="text-2xl fa fa-bars"></i>
+                <button id="barbtn" class="md:hidden p-2 text-2xl">
+            <i id="bar-icon" class="fa-solid fa-bars"></i>
+          </button>
             </div>
         </div>
     </header>
