--- a/public/index.html
+++ b/public/index.html
@@ -428,11 +428,11 @@
                   class="text-2xl text-gray-600 duration-500 fa-brands fa-square-whatsapp hover:text-gray-800"
                 ></i
               ></a>
-                        <a href=""><i
+                        <a href="https://te.me/Rahimi_Dev"><i
                   class="text-2xl text-gray-600 duration-500 fa-brands fa-telegram hover:text-gray-800"
                 ></i
               ></a>
-                        <a href="#"><i
+                        <a href="https://github.com/Mukhtarrahimi"><i
                   class="text-2xl text-gray-600 duration-500 fa-brands fa-square-github hover:text-gray-800"
                 ></i
               ></a>
