--- a/public/index.html
+++ b/public/index.html
@@ -428,7 +428,7 @@
                   class="text-2xl text-gray-600 duration-500 fa-brands fa-square-whatsapp hover:text-gray-800"
                 ></i
               ></a>
-                        <a href="https://te.me/Rahimi_Dev"><i
+                        <a href="https://t.me/Rahimi_Dev"><i
                   class="text-2xl text-gray-600 duration-500 fa-brands fa-telegram hover:text-gray-800"
                 ></i
               ></a>
