--- a/public/index.html
+++ b/public/index.html
@@ -93,26 +93,32 @@
                     <h2 class="pt-6 pb-2 text-gray-700">
                         <strong>I am Mukhtar Rahimi Front-end Web Designer</strong>
                     </h2>
-                    <p class="text-gray-700">I was born on 18/01/2004 <br> I started programming in 2022 as a self-study and with HTML language. I am studying software engineering at the university. After completing HTML, I became interested in web programming and continued to
-                        learn web technologies, and my interest in web programming increased day by day until I was able to successfully complete front-end web technologies. I also developed back I'm learning End-End and looking forward to becoming a
-                        full stack web developer.
+                    <p class="text-gray-700">
+                        I was born on 18/01/2004 <br /> I started programming in 2022 as a self-study and with HTML language. I am studying software engineering at the university. After completing HTML, I became interested in web programming and continued
+                        to learn web technologies, and my interest in web programming increased day by day until I was able to successfully complete front-end web technologies. I also developed back I'm learning End-End and looking forward to becoming
+                        a full stack web developer.
                     </p>
                 </div>
                 <!-- education  -->
                 <div class="tab-contents md:mb-8" id="education">
-                    <h2 class="pt-4 pb-3 text-gray-700"><i class="pr-2 text-xl fa-solid fa-graduation-cap"></i>My Education...</h2>
+                    <h2 class="pt-4 pb-3 text-gray-700">
+                        <i class="pr-2 text-xl fa-solid fa-graduation-cap"></i>My Education...
+                    </h2>
                     <div class="hight-school">
                         <p><strong>High School</strong></p>
-                        <p class="pt-1"><span class="text-orange-500">2010-2021</span> I have successfully completed my school at Shuhada Hichah High School in Jaghori Ghazni - Afghanistan.</p>
+                        <p class="pt-1">
+                            <span class="text-orange-500">2010-2021</span> I have successfully completed my school at Shuhada Hichah High School in Jaghori Ghazni - Afghanistan.
+                        </p>
                     </div>
                     <div class="pt-1 University">
                         <p><strong>University</strong></p>
-                        <p class="pt-1"><span class="text-orange-500">2022- ( )</span> I started my university at Allameh University in the field of computer science, which I am currently studying.</p>
+                        <p class="pt-1">
+                            <span class="text-orange-500">2022- ( )</span> I started my university at Allameh University in the field of computer science, which I am currently studying.
+                        </p>
                     </div>
                     <div class="pt-1 Extera courses">
                         <p><strong>Extra Courses</strong></p>
-                        <p>ICDL, Graphic Design, English </p>
-
+                        <p>ICDL, Graphic Design, English</p>
                     </div>
                 </div>
                 <!-- skill  -->
@@ -142,7 +148,6 @@
                         <div class="bootstrap skill-icon group">
                             <img src="./assets/image/bootstrap logo.png" alt="" class="w-full p-2" />
                             <p class="skill-icon-name">Bootstrap</p>
-
                         </div>
                         <!-- react  -->
                         <div class="react skill-icon group">
@@ -160,18 +165,16 @@
                         <div class="figma skill-icon group">
                             <img src="./assets/image/figma logo.png" alt="" class="w-full p-2" />
                             <p class="skill-icon-name">Figma</p>
-
                         </div>
                         <!-- git  -->
                         <div class="git skill-icon group">
                             <img src="./assets/image/git logo.png" alt="" class="w-full p-2" />
                             <p class="skill-icon-name">Git</p>
-
                         </div>
                     </div>
                 </div>
                 <!-- download button  -->
-                <a href="./assets/image/Rahimi CV.jpg" download class="px-3 py-2 mx-auto mt-8 text-white duration-300 bg-indigo-500 rounded-lg shadow-2xl  md:px-3 hover:bg-indigo-600 md:mx-0">
+                <a href="./assets/image/Rahimi CV.jpg" download class="px-3 py-2 mx-auto mt-8 text-white duration-300 bg-indigo-500 rounded-lg shadow-2xl md:px-3 hover:bg-indigo-600 md:mx-0">
                     <i class="fa-solid fa-download"></i> Download CV
                 </a>
             </div>
@@ -231,10 +234,12 @@
         <div class="grid grid-cols-1 gap-6 pt-10 portfolio padding md:grid-cols-2 lg:grid-cols-3">
             <!-- restuarant  -->
             <a data-aos="fade-up" data-aos-duration="800" href="" class="relative overflow-hidden rounded-lg group">
-                <img src="./assets/image/New folder/5.png" alt="" class="rounded-lg " />
+                <img src="./assets/image/New folder/5.png" alt="" class="rounded-lg" />
                 <div class="description">
                     <h2 class="text-xl font-semibold text-white">Restaurant</h2>
-                    <p class="pt-1 pb-3 text-sm text-center text-white">This is a restaurant website that is made with a beautiful style.</p>
+                    <p class="pt-1 pb-3 text-sm text-center text-white">
+                        This is a restaurant website that is made with a beautiful style.
+                    </p>
                     <div class="bg-icon">
                         <i class="p-3 text-2xl text-gray-800 fa-solid fa-share"></i>
                     </div>
@@ -245,8 +250,10 @@
                 <img src="./assets/image/New folder/1.png" alt="" class="rounded-lg" />
                 <div class="description">
                     <h2 class="text-xl font-semibold text-white">Search Engine</h2>
-                    <p class="pt-1 pb-3 text-sm text-center text-white">You can download your favorite images using this program</p>
-                    <div class="bg-icon ">
+                    <p class="pt-1 pb-3 text-sm text-center text-white">
+                        You can download your favorite images using this program
+                    </p>
+                    <div class="bg-icon">
                         <i class="p-3 text-2xl text-gray-800 fa-solid fa-share"></i>
                     </div>
                 </div>
@@ -256,8 +263,10 @@
                 <img src="./assets/image/New folder/3.png" alt="" class="rounded-lg" />
                 <div class="description">
                     <h2 class="text-xl font-semibold text-white">Sign Up Form</h2>
-                    <p class="pt-1 pb-3 text-sm text-center text-white">It is a simple registration form that is coded with a good design</p>
-                    <div class="bg-icon ">
+                    <p class="pt-1 pb-3 text-sm text-center text-white">
+                        It is a simple registration form that is coded with a good design
+                    </p>
+                    <div class="bg-icon">
                         <i class="p-3 text-2xl text-gray-800 fa-solid fa-share"></i>
                     </div>
                 </div>
@@ -267,8 +276,10 @@
                 <img src="./assets/image/New folder/2.png" alt="" class="rounded-lg" />
                 <div class="description">
                     <h2 class="text-xl font-semibold text-white">Loading Form</h2>
-                    <p class="pt-1 pb-3 text-sm text-center text-white">It is a simple form for registration made with god loading effect.</p>
-                    <div class="bg-icon ">
+                    <p class="pt-1 pb-3 text-sm text-center text-white">
+                        It is a simple form for registration made with god loading effect.
+                    </p>
+                    <div class="bg-icon">
                         <i class="p-3 text-2xl text-gray-800 fa-solid fa-share"></i>
                     </div>
                 </div>
@@ -277,8 +288,10 @@
                 <img src="./assets/image/New folder/4.png" alt="" class="border-b rounded-lg" />
                 <div class="description">
                     <h2 class="text-xl font-semibold text-white">Travel Agency</h2>
-                    <p class="pt-1 pb-3 text-sm text-center text-white">The website is for travel companies where you can book your desired place online</p>
-                    <div class="bg-icon ">
+                    <p class="pt-1 pb-3 text-sm text-center text-white">
+                        The website is for travel companies where you can book your desired place online
+                    </p>
+                    <div class="bg-icon">
                         <i class="p-3 text-2xl text-gray-800 fa-solid fa-share"></i>
                     </div>
                 </div>
@@ -287,9 +300,13 @@
             <a data-aos="fade-up" data-aos-duration="1200" href="" class="relative overflow-hidden rounded-lg group">
                 <img src="./assets/image/New folder/6.png" alt="" class="border-b rounded-lg" />
                 <div class="description">
-                    <h2 class="font-semibold text-white md:text-xl">Regstration Form</h2>
-                    <p class="pt-1 pb-3 text-sm text-center text-white">It is a simple form that has separate pages for registration and login</p>
-                    <div class="bg-icon ">
+                    <h2 class="font-semibold text-white md:text-xl">
+                        Regstration Form
+                    </h2>
+                    <p class="pt-1 pb-3 text-sm text-center text-white">
+                        It is a simple form that has separate pages for registration and login
+                    </p>
+                    <div class="bg-icon">
                         <i class="p-3 text-2xl text-gray-800 fa-solid fa-share"></i>
                     </div>
                 </div>
@@ -458,25 +475,26 @@
     </script>
     <!-- contact form url  -->
     <script>
-        const scriptURL = 'https://script.google.com/macros/s/AKfycbzmdIYR3BdaMw2OcLn3XBI6EdPy9lXh4nPgUhrX5xMrxp2_oCW-XkrrrF_e63_iW_33gQ/exec'
-        const form = document.forms['submit-to-google-sheet']
-        const msg = document.getElementById('msg')
+        const scriptURL =
+            "https://script.google.com/macros/s/AKfycbzmdIYR3BdaMw2OcLn3XBI6EdPy9lXh4nPgUhrX5xMrxp2_oCW-XkrrrF_e63_iW_33gQ/exec";
+        const form = document.forms["submit-to-google-sheet"];
+        const msg = document.getElementById("msg");
 
-        form.addEventListener('submit', e => {
-            e.preventDefault()
+        form.addEventListener("submit", (e) => {
+            e.preventDefault();
             fetch(scriptURL, {
-                    method: 'POST',
-                    body: new FormData(form)
+                    method: "POST",
+                    body: new FormData(form),
                 })
-                .then(response => {
-                    msg.innerHTML = 'Message sent successfully';
+                .then((response) => {
+                    msg.innerHTML = "Message sent successfully";
                     setTimeout(function() {
-                        msg.innerHTML = '';
-                    }, 5000)
-                    form.reset()
+                        msg.innerHTML = "";
+                    }, 5000);
+                    form.reset();
                 })
-                .catch(error => console.error('Error!', error.message))
-        })
+                .catch((error) => console.error("Error!", error.message));
+        });
     </script>
 </body>
 
